# Slark

./: Cargo.toml  README.md  rustfmt.toml
src/: image.rs  main.rs  pool.rs  project.rs
src/formats/: gif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
src/ui/: gif.rs  image.rs  mod.rs  root.rs  stats.rs  surface.rs  tileize.rs  view.rs  zoom.rs
