[package]
name = "slark"
version = "0.0.0"
edition = "2018"
publish = false
license = "AGPL-3.0-or-later"
authors = ["Kaur Kuut <admin@kaurkuut.com>"]

[dependencies]
#druid = { git = "https://github.com/xi-editor/druid.git" }
druid = { path = "../druid/druid" }
gif = "0.10.3"
gif-dispose = "2.2.0"
imgref = "1.4.0"
rgb = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"