[package]
name = "slark"
version = "0.0.0"
edition = "2018"
publish = false
license = "AGPL-3.0-or-later"
authors = ["Kaur Kuut <admin@kaurkuut.com>"]

[dependencies]
#druid = { git = "https://github.com/xi-editor/druid.git" }
druid = { path = "../druid/druid" }
#druid = "0.5.0"
jpeg-decoder = "0.2.0"
webp-animation = "0.6.0"
gif = "0.10.3"
gif-dispose = "2.2.0"
imgref = "1.4.0"
rgb = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev.package.druid]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true