[package]
name = "slark"
version = "0.0.0"
edition = "2018"
publish = false
license = "AGPL-3.0-or-later"
authors = ["Kaur Kuut <admin@kaurkuut.com>"]

[dependencies]
#druid = { path = "../druid/druid" }
druid = "0.8.3"
interprocess = { git = "https://github.com/kotauskas/interprocess" }
png = "0.17.5"
jpeg-decoder = "0.2.5"
webp-animation = "0.6.0"
gif = "0.11.3"
gif-dispose = "3.1.1"
imgref = "1.9.1"
rgb = "0.8.32"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev.package.druid]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
